# English-Spanish_translator

./: README.md  bpe.py  merges_en.csv  merges_es.csv  nmt.py  pyproject.toml  requirements.txt
src/: bpe.py  nmt.py
src/data/: merges_en.csv  merges_es.csv
src/nmt_en_es_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
