[project]
name = "nmt-en-es-transformer"
version = "0.1.0"
description = "English-Spanish Neural Machine Translation using Transformer and BPE"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "tensorflow",
    "keras",
    "pandas",
    "transformers",
    "huggingface-hub",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"